--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification:
 bing_site_verification:
-naver_site_verification:
+naver_site_verification: "8fe7e3781661a29cbc008d42deecf6865877cc5e"
 yandex_site_verification:
 baidu_site_verification:
 
