--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,23 @@ main:
     url: /categories/
   - title: "태그"
     url: /tags/
+  - title: "검색"
+    url: /search/
+
+docs:
+  - title: "목차1"
+    children:
+      - title: "Category"
+        url: /categories/
+      - title: "Tag"
+        url: /tags/
+
+  - title: "목차2"
+    children:
+      - title: "Category"
+        url: /categories/
+      - title: "Tag"
+        url: /tags/
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
