--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@ minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon
 locale: "ko-KR"
 title: "윤식's 개발블로그"
 title_separator: "|"
-subtitle: 청정수한방울 # site tagline that appears below site title in masthead
+subtitle: 개발계의 청정수한방울 # site tagline that appears below site title in masthead
 name: "Yoonsik-Shin"
 description: "가치를 만들어 내고 싶은 초보개발자"
 url: "https://yoonsik-shin.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo: "/assets/images/scan.jpg"
+# logo: "/assets/images/scan.jpg"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: true # true, false (default)
 words_per_minute: 200
@@ -104,7 +104,7 @@ analytics:
 # Site Author
 author:
   name: "Yoonsik-Shin"
-  avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar: "/assets/images/scan.jpg"
   bio: "가치를 만들어 내고 싶은 초보개발자"
   location: "Seoul (Korea)"
   email:
@@ -257,5 +257,7 @@ defaults:
       share: true
       related: true
       show_date: true
+      toc_sticky: true
+      toc_label: 목차
 
 date_format: "%Y-%m-%d"
