--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 # Site Author
 author:
   name: "Yoonsik-Shin"
-  avatar: "https://yoonsik-shin.github.io/images/scan.jpg"
+  avatar: "https://yoonsik-shin.github.io/assets/images/Scan.jpg"
   bio: "가치를 만들어 내고 싶은 초보개발자"
   location: "Seoul (Korea)"
   email:
